Made FileUploadEventArgs.cs to give the event method the option to access the filename of the uploaded file.

--- a/FubarDev.FtpServer/FubarDev.FtpServer.csproj
+++ b/FubarDev.FtpServer/FubarDev.FtpServer.csproj
@@ -58,6 +58,7 @@
     <Compile Include="CommandHandlers\MfctCommandHandler.cs" />
     <Compile Include="CommandHandlers\MffCommandHandler.cs" />
     <Compile Include="CommandHandlers\MfmtCommandHandler.cs" />
+    <Compile Include="FileUploadEventArgs.cs" />
     <Compile Include="FtpCommandHandlerBase.cs" />
     <Compile Include="CommandExtensions\FtpCommandHandlerExtension.cs" />
     <Compile Include="FtpCommandHandlerProcessDelegate.cs" />
